Trigger GitHub Actions only for main and pull request, not branch

--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -1,5 +1,8 @@
 name: Application CI
-on: [push, pull_request]
+on:
+    push:
+        - "main"
+    pull_request:
 jobs:
     pipeline:
         name: jhipsterMinimal pipeline
