Put back trigger GitHub Actions

--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -1,8 +1,5 @@
 name: Application CI
-on:
-    push:
-        - "main"
-    pull_request:
+on: [push, pull_request]
 jobs:
     pipeline:
         name: jhipsterMinimal pipeline
